introduced \htmltag to add html specific tags

--- a/docs/mwa_csl_guide/main.css
+++ b/docs/mwa_csl_guide/main.css
@@ -358,4 +358,5 @@ p { hyphens: auto; }
 
 .frame { text-align: center; margin: 1.5rem 0 1.5rem 0; }
 
+.tex-center { text-align: center; }
 /*# sourceMappingURL=main.css.map */
